--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,9 @@
     <string name="no">Нет</string>
     <string name="error_event_list_clear">Список пуст</string>
     <string name="error_events_list_server">Ошибка базы данных</string>
+    <string name="hint_title">Название</string>
+    <string name="hint_subtitle">Подзаголовок</string>
+    <string name="hint_price">Цена</string>
+    <string name="hint_about_product">О товаре</string>
+    <string name="bar_code">Штрих код</string>
 </resources>
